--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.FunSpeak">
-        <activity android:name=".LanguageSelection">
+        <activity android:name=".views.SelectDifficulty"></activity>
+        <activity android:name=".views.LanguageSelection">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
