--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,14 +9,17 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.FunSpeak">
-        <activity android:name=".views.SelectDifficulty"></activity>
-        <activity android:name=".views.LanguageSelection">
+
+        <activity android:name=".views.login.LoginActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".views.SelectDifficulty" />
+        <activity android:name=".views.LanguageSelection" />
+        <activity android:name=".views.register.RegisterActivity" />
         <activity android:name=".views.tasks.CompletePhraseTask" />
         <activity android:name=".views.Incorrect" />
         <activity android:name=".views.Correct" />
