--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,7 +10,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.FunSpeak">
         <activity android:name=".views.tasks.SynonymsTask"></activity>
-        <activity android:name=".views.login.LoginActivity">
+        <activity android:name=".views.login.LoginActivity" android:theme="@style/SplashTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
