--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.funspeak">
-
+<uses-permission android:name="android.permission.INTERNET"/>
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -10,6 +10,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.FunSpeak">
         <activity android:name=".views.tasks.SynonymsTask"></activity>
+        <activity android:name=".views.login.Login"></activity>
         <activity android:name=".views.login.LoginActivity" android:theme="@style/SplashTheme" android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -20,6 +21,7 @@
         <activity android:name=".views.SelectDifficulty" />
         <activity android:name=".views.LanguageSelection" android:theme="@style/Theme.AppCompat.NoActionBar"/>
         <activity android:name=".views.register.RegisterActivity" android:theme="@style/Theme.AppCompat.DayNight.NoActionBar"/>
+        <activity android:name=".views.register.Register" android:theme="@style/Theme.AppCompat.DayNight.NoActionBar"/>
         <!--Preschool-->
         <activity android:name=".views.Preschool" android:theme="@style/Theme.AppCompat.NoActionBar"/>
         <activity android:name=".views.PreschoolSelect" android:theme="@style/Theme.AppCompat.NoActionBar"/>
